--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
       var menu = [
           " ",
           " ",
+          "LIFE IS CHOICE",
           " ",
-          "TO LIVE IS TO FUNCTION,THAT IS ALL THERE IS IN LIVING.",
           " ",
-          " ",
-          "HELLO' WORLD",
+          "你好👋，欢迎来到此页面📃",
           "I'M A GEEK WHO LOVES LIFE",
           "I LIVE IN SHENZHEN CHINA",
           "THANK YOU FOR COMING",
