--- a/index.html
+++ b/index.html
@@ -54,5 +54,17 @@
         };
       doItem();
     </script>
+    
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158904385-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158904385-1');
+</script>
+
   </body>
 </html>
