--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- @Wahsun -->
 <html>
   <head>
-    <title>*</title>
+    <title>HELLO</title>
   </head>
   <body style="background-color:black;font-family:courier;color:#05fa0d;">
     <span id="content"></span><span style="height:30px;width:30px;background-color:#05fa0d;">&nbsp;</span>
