--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
           "THIS PAGE USES GOOGLE ANALYTICS TO RECORD SOME OF YOUR INFORMATION" ,
           " ",
           " ",
-          "MAIL:X@WAHSUN.ORG",
-          "HOW DID YOU GET HERE¿",
-          "I WANT TO KNOW",
+          "✉ X@WAHSUN.ORG",
+          "✈ HTTP://T.ME/WAHSUN",
           ".......................",
           "................",
           "...................................",
