--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
           "THIS PAGE USES GOOGLE ANALYTICS TO RECORD SOME OF YOUR INFORMATION" ,
           " ",
           " ",
-          "✉ X@WAHSUN.ORG",
-          "✈ HTTP://T.ME/WAHSUN",
+          "MAIL:X@WAHSUN.ORG",
           ".......................",
           "................",
           "...................................",
@@ -29,9 +28,6 @@
           "...............................",
           "......................................",
           "..............",
-          "........................",
-          "....................",
-          ".................................",
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
