--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       var menu = [
           " ",
           
-          ".......................",
-          "SEEKING TRUTH AND VALUE",
+          " ",
+          "當罪惡的鏈條足夠長，長到無法窺視全貌時，那麼每個環節作惡的人，都有理由覺得自己很無辜。 "
+          "漢娜 •阿倫特",
           ".......................",
           " ",
           "THIS DOMAIN NAME IS ONLY USED TO BUILD MICRO SERVICES" ,
