--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           "        I PREFER EMAIL COMMUNICATION, SO YOU CAN CONTACT ME BY EMAIL FIRST! ",
           " ",
           " EMAIL:X@WAHSUN.ORG",    
-    
+          " ",
+          " TELEGRAM:HTTPS://T.ME/WAHSUN",  
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
