--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           "  ",
           "        I PREFER EMAIL COMMUNICATION, SO YOU CAN CONTACT ME BY EMAIL FIRST! ",
           " ",
-          " EMAIL:X@WAHSUN.ORG",    
+          " E:X@WAHSUN.ORG",    
           " ",
-          " TELEGRAM:HTTPS://T.ME/WAHSUN",  
+          " T:HTTPS://T.ME/WAHSUN",  
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
