--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       var menu = [
           " ",
            "        ",
-          "    THINKING HUMAN NATURE",
+          "   哲學家:漢娜·阿倫特",
           " ",
-          "    WHEN THE CHAIN OF EVIL IS LONG ENOUGH TO BE UNABLE TO SEE THE WHOLE PICTURE, THEN EVERYONE WHO DOES EVIL IN EACH LINK HAS REASON TO FEEL INNOCENT!",
+          "    當罪惡的鏈條足夠長，長到無法窺視全貌時，那麽，在每個環節作惡的人，都有理由覺得自己很無辜!",
           ".............................................................",
           "...............................................",
           " ",
           " ",
-          "SEEK TRUTH AND VALUE",
+          "FREE CHANGE | FREE LIFE",
           " ",
           "  ____________________WAHSUN ",
           " ",
