--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
       var menu = [
           " ",
           " ",
-          " ",
-          " ",
-          "WHEN THE CHAIN OF SIN IS LONG ENOUGH, SO LONG THAT IT IS IMPOSSIBLE TO SEE THE WHOLE PICTURE, THEN THOSE WHO HAVE DONE EVIL AT EVERY TURN HAVE REASON TO FEEL THEMSELVES INNOCENT.",
-          "——————————————————————————————————LOSOPHER:HANNAH ARENDT",
+          ".......",
+          "..............",
+          "............................",
+          "WHEN THE CHAIN OF SIN IS LONG ENOUGH,", 
+          "SO LONG THAT IT IS IMPOSSIBLE TO SEE THE WHOLE PICTURE, ",
+          "THEN THOSE WHO HAVE DONE EVIL AT EVERY TURN HAVE REASON TO FEEL THEMSELVES INNOCENT.",
+          "___________________________________________________________________________________LOSOPHER:HANNAH ARENDT",
           ".............................................................",
           "...............................................",
           "....................",
           ".......................................",
           ".............................",
           " ",
-          " ",
-          "LESS IS MORE|FREEDOM TO CHANGE|FREEDOM TO LIVE",
-          " ",
-          " ",
+          "------------------------------------------------",
+          "|LESS IS MORE|FREEDOM TO CHANGE|FREEDOM TO LIVE|",
+          "------------------------------------------------",
           " ",
           "THIS PAGE IS HOSTED ON GITHUB FOR DISPLAY PURPOSES ONLY, NO OTHER PAGES HAVE BEEN CREATED!",
           " ",
