--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           "LESS IS MORE",
           "____________WAHSUN",
           " ",
-          "THIS PAGE IS FOR INFORMATION DISPLAY ONLY AND IS HOSTED ON GITHUB",
+          "THIS PAGE IS FOR INFORMATION DISPLAY ONLY AND IS HOSTED ON GITHUB.COM",
           "THIS PAGE WILL RECORD YOUR VISIT INFORMATION, SUCH AS IP ADDRESS/DEVICE INFORMATION",
           " ",
           "IF YOU HAVE ANY SUGGESTIONS, YOU CAN CONTACT ME BY EMAIL!",
