--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
       var menu = [
           " ",
           " ",
-          "LESS IS MORE",
-          "____________WAHSUN",
-          " ",
+          "BE HUMBLE. YOU MAY BE WRONG.",
+          "BE KIND. YOU MAY BE REMEMBERED.",
+        "BE FORGIVING. YOU MAY FEEL LIGHTER.",
+        "BE TRUSTWORTHY. YOU MAY SEE FURTHER.",
+        "BE GENEROUS. OTHERS MAY RECIPROCATE.",
+        "BE CURIOUS. YOU MAY STAY TEACHABLE.",
+        "BE HARD WORKING. YOU MAY BE LUCKIER.",
+        "BE YOURSELF. YOU WILL BE HAPPIER.",
+        " ",
+        " ",
           "THIS PAGE IS FOR INFORMATION DISPLAY ONLY AND IS HOSTED ON GITHUB.COM",
           "THIS PAGE WILL RECORD YOUR VISIT INFORMATION, SUCH AS IP ADDRESS/DEVICE INFORMATION!",
           " ",
