--- a/index.html
+++ b/index.html
@@ -10,17 +10,29 @@
       var menu = [
           " ",
           " ",
-          "BE HUMBLE. YOU MAY BE WRONG.",
-          "BE KIND. YOU MAY BE REMEMBERED.",
-          "BE FORGIVING. YOU MAY FEEL LIGHTER.",
-          "BE TRUSTWORTHY. YOU MAY SEE FURTHER.",
-          "BE GENEROUS. OTHERS MAY RECIPROCATE.",
-          "BE CURIOUS. YOU MAY STAY TEACHABLE.",
-          "BE HARD WORKING. YOU MAY BE LUCKIER.",
+          "🎯 [TOO MUCH] STRUCTURE MAKES LIFE MUNDANE. [TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC. A DANCE BETWEEN THE TWO MAKES LIFE MEANINGFUL. ",
+          " ",
+          "[TOO MUCH] IS YOUR WORST ENEMY (EVEN IF YOU TRY TO DO THE GOOD THING) ",
+          " ",
+          "1. TOO MUCH WORK GIVES YOU BURNOUT",
+          "2. TOO MUCH KINDNESS MAKES YOU NAIVE",
+          "3. TOO MUCH TRUST IN PEOPLE HURTS YOU",
+          " ",
+          "MAKE SURE YOU STOP BEING "TOO MUCH" AND START BALANCING YOUR LIFE ON YOUR TERMS.",
+          "BUT,MOST PEOPLE ENGAGE IN POLARIZED THINKING.",
           "BE YOURSELF. YOU WILL BE HAPPIER.",
+        "IT’S EITHER MUNDANE OR CHAOTIC.",
+        "IN REALITY ALL THINGS IN LIFE EXIST ON A SPECTRUM.",
+        "FOR EACH PERSON THERE IS AN IDEAL SPOT ON THAT SPECTRUM.",
+        "MAKE IT A MISSION TO FIND THAT BALANCE.",
+        "FIND WHAT GETS YOU GOING THE MOST.",
+        "LEARN BY DOING.",
+        "PS.",
+        "SOMETIMES WE NEED A BIT OF RANDOMNESS TO ROCK THE SHIP ON ITS SAIL.",
+        "BE IN BETWEEN DON'T BE RIGID.",
         " ",
         " ",
-          "THIS PAGE IS FOR INFORMATION DISPLAY ONLY AND IS HOSTED ON GITHUB.COM",
+          "+++++++++++++++++++++++++++++++++",
           "THIS PAGE WILL RECORD YOUR VISIT INFORMATION, SUCH AS IP ADDRESS/DEVICE INFORMATION!",
           " ",
           "IF YOU HAVE ANY SUGGESTIONS, YOU CAN CONTACT ME BY EMAIL!",
