--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
           " ",
           " ",
           "[TOO MUCH] STRUCTURE MAKES LIFE MUNDANE.",
-          "[TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC. A DANCE BETWEEN THE TWO MAKES LIFE MEANINGFUL. ",
-          "[TOO MUCH] IS YOUR WORST ENEMY (EVEN IF YOU TRY TO DO THE GOOD THING) ",
+          "[TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC.  ",
+          "[TOO MUCH] IS YOUR WORST ENEMY ",
           " ",
           "1. TOO MUCH WORK GIVES YOU BURNOUT",
           "2. TOO MUCH KINDNESS MAKES YOU NAIVE",
@@ -37,7 +37,7 @@
           "+++++++++++++++++++++++++++++++++",
           "⚠ THIS PAGE WILL RECORD YOUR VISIT INFORMATION, SUCH AS IP ADDRESS/DEVICE INFORMATION!",
           "----------------------",
-          "IF YOU HAVE ANY SUGGESTIONS🤡, YOU CAN CONTACT ME BY EMAIL!📫",
+          "IF YOU HAVE ANY SUGGESTIONS, YOU CAN CONTACT ME BY EMAIL!",
           "..................",
           "X@WAHSUN.ORG",
         ],
