--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
           " ",
           " ",
           "[TOO MUCH] STRUCTURE MAKES LIFE MUNDANE.",
-          "[TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC.  ",
-          "[TOO MUCH] IS YOUR WORST ENEMY ",
+          "[TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC.",
+          "[TOO MUCH] IS YOUR WORST ENEMY.",
           " ",
           "1. TOO MUCH WORK GIVES YOU BURNOUT",
           "2. TOO MUCH KINDNESS MAKES YOU NAIVE",
