--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           "MAKE SURE YOU STOP BEING 'TOO MUCH' AND START BALANCING YOUR LIFE ON YOUR TERMS.",
           "BUT,MOST PEOPLE ENGAGE IN POLARIZED THINKING.",
           "BE YOURSELF. YOU WILL BE HAPPIER.",
-          "ITS EITHER MUNDANE OR CHAOTIC.",
+          "IT'S EITHER MUNDANE OR CHAOTIC.",
           "IN REALITY ALL THINGS IN LIFE EXIST ON A SPECTRUM.",
           "FOR EACH PERSON THERE IS AN IDEAL SPOT ON THAT SPECTRUM.",
           "MAKE IT A MISSION TO FIND THAT BALANCE.",
@@ -35,7 +35,7 @@
           " ",
           " ",
           "+++++++++++++++++++++++++++++++++",
-          "⚠ THIS PAGE WILL RECORD YOUR VISIT INFORMATION, SUCH AS IP ADDRESS/DEVICE INFORMATION!",
+          "THIS PAGE WILL RECORD YOUR VISIT INFORMATION, SUCH AS IP ADDRESS/DEVICE INFORMATION!",
           "----------------------",
           "IF YOU HAVE ANY SUGGESTIONS, YOU CAN CONTACT ME BY EMAIL!",
           "..................",
