--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           }
         };
       doItem();
+      </script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MWVF02CTCP"></script>
 <script>
