--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           " ",
           " ",
           "IF YOU HAVE ANY SUGGESTIONS, YOU CAN CONTACT ME BY EMAIL!",
-          "E:X@WAHSUN.ORG",
+          "X@WAHSUN.ORG",
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
