--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           " ",
           "THIS PAGE WILL RECORD YOUR VISIT INFORMATION, SUCH AS IP ADDRESS/DEVICE INFORMATION!",
           " ",
-          " ",
+          "_______________𝓵𝓮𝓼𝓼 𝓲𝓼 𝓶𝓸𝓻𝓮",
           "IF YOU HAVE ANY SUGGESTIONS, YOU CAN CONTACT ME BY EMAIL!",
           "X@WAHSUN.ORG",
         ],
