--- a/index.html
+++ b/index.html
@@ -74,3 +74,4 @@
 </script>
   </body>
 </html>
+<script defer src="https://cloud.umami.is/script.js" data-website-id="1203ee2e-d7a8-4dd9-b70f-fb2fa4bea1fe"></script>
