--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
           "THIS PAGE WILL RECORD YOUR VISIT INFORMATION, SUCH AS IP ADDRESS/DEVICE INFORMATION!",
           " ",
           "IF YOU HAVE ANY SUGGESTIONS, YOU CAN CONTACT ME! :)",
-          "E:X@WAHSUN.ORG",
-          "T:HTTPS://T.ME/WAHSUN",
+          "EMAIL:X@WAHSUN.ORG",
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
