--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
         };
       doItem();
       </script>
-    <script defer src="https://umami.1hi.best/script.js" data-website-id="ab90cc94-19bd-476f-97fe-2a9e65feb232"></script> 
+<script defer data-domain="wahsun.org" src="http://apps-plausible-501188-192-227-184-179.traefik.me/js/script.file-downloads.outbound-links.js"></script>
   </body>
 </html>
