--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           }
         };
       doItem();
+      defer data-domain="wahsun.org" src="http://apps-plausible-501188-192-227-184-179.traefik.me/js/script.file-downloads.outbound-links.js"
       </script>
-<script defer data-domain="wahsun.org" src="http://apps-plausible-501188-192-227-184-179.traefik.me/js/script.file-downloads.outbound-links.js"></script>
   </body>
 </html>
