--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>HELLO</title>
-    <script defer src="https://umami.1hi.best/script.js" data-website-id="ab90cc94-19bd-476f-97fe-2a9e65feb232"></script>
   </head>
     
   <body style="background-color:black;font-family:courier;color:#05fa0d;">
@@ -61,6 +60,9 @@
           }
         };
       doItem();
+    </script>
+    <script 
+      defer src="https://umami.1hi.best/script.js" data-website-id="ab90cc94-19bd-476f-97fe-2a9e65feb232">
     </script>
   </body>
 </html>
