--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
           " ",
           " ",
           " ",
+          "LESS,BUT BETTER!",
+          " ",
+          " ",
           "[TOO MUCH] STRUCTURE MAKES LIFE MUNDANE.",
           "[TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC.",
           "[TOO MUCH] IS YOUR WORST ENEMY.",
@@ -60,9 +63,6 @@
           }
         };
       doItem();
-    </script>
-    <script>
-      defer src="https://umami.1hi.best/script.js" data-website-id="ab90cc94-19bd-476f-97fe-2a9e65feb232"
     </script>
   </body>
 </html>
