--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
           " ",
           " ",
           " ",
-          "LESS,BUT BETTER!",
-          " ",
+          ">>>>>>>>>> LESS,BUT BETTER!",
           " ",
           "[TOO MUCH] STRUCTURE MAKES LIFE MUNDANE.",
           "[TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC.",
