--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!-- x@Wahsun.org -->
 <html>
   <head>
-    <title>HELLO</title>
+    <title>LESS BUT BETTER</title>
   </head>
     
   <body style="background-color:black;font-family:courier;color:#05fa0d;">
     <span id="content"></span><span style="height:30px;width:30px;background-color:#05fa0d;">&nbsp;</span>
     <script>
       var menu = [
+          " ",
           " ",
           " ",
           " ",
@@ -37,9 +38,8 @@
           " ",
           " ",
           " ",
-          " ",
-          "ADMINISTRATOR CONTACT",
-          "X@WAHSUN.ORG",
+          "IF YOU NEED TO GET IN TOUCH, PLEASE EMAIL",
+          "X@WAHSUN.ORG.",
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
