--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           " ",
           " ",
           "IF YOU NEED TO GET IN TOUCH, PLEASE EMAIL",
-          "X@WAHSUN.ORG.",
+          "X@WAHSUN.ORG",
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
