--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
           " ",
           " ",
           " ",
-          "........x......",
-          "....x....",
-          '...................x.....',
-          "MIDDLE-AGED MAN BASED IN CHINA.",
-          "INTO MUSIC, CATS, AND INTERNET TECH.",            
-          "LIVING A MINIMALIST LIFE.",
-          "REACH OUT VIA EMAIL IF YOU'D LIKE TO CONNECT. :)",
-          "X@WAHSUN.ORG",
+          ".................",
+          "........",
+          '------------------x-----',
+          "ABOUT:",
+           "MIDDLE-AGED MAN BASED IN CHINA.",
+           "INTO MUSIC, CATS, AND INTERNET TECH.",            
+           "LIVING A MINIMALIST LIFE.",
+           "REACH OUT VIA EMAIL IF YOU'D LIKE TO CONNECT. :)",
+           "X@WAHSUN.ORG",
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
