--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           " ",
           " ",
           " ",
-          ".................",
-          "........",
-          '------------------x-----',
+          "---------------------",
+          "-------------",
+          '------------------------------',
           "ABOUT:",
            "MIDDLE-AGED MAN BASED IN CHINA.",
            "INTO MUSIC, CATS, AND INTERNET TECH.",            
@@ -67,4 +67,6 @@
           }
         };
       doItem();
-      <script defer src="https://umami.1hi.best/script.js" data-website-id="e4e36669-3feb-4730-84cc-a2df59a24e70"></script>
+    </script>
+  </body>
+</html><script defer src="https://umami.1hi.best/script.js" data-website-id="e4e36669-3feb-4730-84cc-a2df59a24e70"></script>
