--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- x@Wahsun.org -->
 <html>
   <head>
-    <title>LESS BUT BETTER</title>
+    <title>LESS IS MORE</title>
   </head>
     
   <body style="background-color:black;font-family:courier;color:#05fa0d;">
