--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
           "-------------",
           '------------------------------',
           "ABOUT:",
-           "MIDDLE-AGED MAN BASED IN CHINA.",
-           "INTO MUSIC, CATS, AND INTERNET TECH.",            
-           "LIVING A MINIMALIST LIFE.",
-           "REACH OUT VIA EMAIL IF YOU'D LIKE TO CONNECT. :)",
-           "X@WAHSUN.ORG",
+          " ",
+          "CHINESE GUY  ❤️  MUSIC · CATS · INTERNET TECH | MINIMALIST LIFE.",
+          "REACH OUT VIA EMAIL IF YOU'D LIKE TO CONNECT. :)",
+          "X@WAHSUN.ORG",
         ],
         i = 1, j, item, html,
         e = document.getElementById("content"),
