--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           " ",
           " ",
           "[TOO MUCH] STRUCTURE MAKES LIFE MUNDANE.",
+        "⚖️ TOO MUCH STRUCTURE → LIFE FEELS MUNDANE.",
           "[TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC.",
           "[TOO MUCH] IS YOUR WORST ENEMY.",
           " ",
