--- a/index.html
+++ b/index.html
@@ -13,28 +13,19 @@
           " ",
           " ",
           " ",
-          "[TOO MUCH] STRUCTURE MAKES LIFE MUNDANE.",
-        "⚖️ TOO MUCH STRUCTURE → LIFE FEELS MUNDANE.",
-          "[TOO MUCH] SPONTANEITY MAKES LIFE CHAOTIC.",
-          "[TOO MUCH] IS YOUR WORST ENEMY.",
+          "TOO MUCH IS YOUR WORST ENEMY",
           " ",
-          "1.TOO MUCH WORK GIVES YOU BURNOUT",
-          "2.TOO MUCH KINDNESS MAKES YOU NAIVE",
-          "3.TOO MUCH TRUST IN PEOPLE HURTS YOU",
+          "⚖️ TOO MUCH STRUCTURE→IFE FEELS MUNDANE.",
+          "⚡ TOO MUCH SPONTANEITY→LIFE FEELS CHAOTIC.",
+          "🔥 TOO MUCH WORK→BURNOUT.",
+          "💛 TOO MUCH KINDNESS→NAIVETY.",
+          "🤝 TOO MUCH TRUST→PAIN.",
           " ",
-          "MAKE SURE YOU STOP BEING 'TOO MUCH' AND START BALANCING YOUR LIFE ON YOUR TERMS.",
+          "STOP BEING “TOO MUCH.” START FINDING YOUR BALANCE—YOUR WAY.",
           " ",
-          "BUT,MOST PEOPLE ENGAGE IN POLARIZED THINKING.",
-          "BE YOURSELF. YOU WILL BE HAPPIER.",
-          "IT'S EITHER MUNDANE OR CHAOTIC.",
-          "IN REALITY ALL THINGS IN LIFE EXIST ON A SPECTRUM.",
-          "FOR EACH PERSON THERE IS AN IDEAL SPOT ON THAT SPECTRUM.",
-          "MAKE IT A MISSION TO FIND THAT BALANCE.",
-          "FIND WHAT GETS YOU GOING THE MOST.",
-          "LEARN BY DOING.",
-          "PS.",
-          "SOMETIMES WE NEED A BIT OF RANDOMNESS TO ROCK THE SHIP ON ITS SAIL.",
-          "BE IN BETWEEN DON'T BE RIGID.",
+          "MOST PEOPLE THINK IN EXTREMES. LIFE ISN'T BLACK OR WHITE—IT'S A SPECTRUM. FIND YOUR SPOT. DO WHAT ENERGIZES YOU. LEARN BY DOING.",
+          " ",   
+          "P.S. A LITTLE RANDOMNESS KEEPS THE SAILS ROCKING. DON'T BE RIGID—STAY IN BETWEEN.",
           " ",
           " ",
           " ",
@@ -44,7 +35,7 @@
           " ",
           "ABOUT:",
           "CHINESE GUY  ❤️  MUSIC · CATS · INTERNET TECH | MINIMALIST LIFE.",
-          "REACH OUT VIA EMAIL IF YOU'D LIKE TO CONNECT. :)",
+          "REACH OUT VIA 📮 IF YOU'D LIKE TO CONNECT. :)",
           "X@WAHSUN.ORG",
         ],
         i = 1, j, item, html,
