--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           " ",
           " ",
           " ",
-          "TOO MUCH IS YOUR WORST ENEMY",
+          "⚠️ TOO MUCH IS YOUR WORST ENEMY",
           " ",
           "⚖️ TOO MUCH STRUCTURE→IFE FEELS MUNDANE.",
           "⚡ TOO MUCH SPONTANEITY→LIFE FEELS CHAOTIC.",
