--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
           " ",
           " ",
           " ",
-          "⚠️ TOO MUCH IS YOUR WORST ENEMY",
+          "TOO MUCH IS YOUR WORST ENEMY",
           " ",
-          "⚖️ TOO MUCH STRUCTURE→IFE FEELS MUNDANE.",
-          "⚡ TOO MUCH SPONTANEITY→LIFE FEELS CHAOTIC.",
-          "🔥 TOO MUCH WORK→BURNOUT.",
-          "💛 TOO MUCH KINDNESS→NAIVETY.",
-          "🤝 TOO MUCH TRUST→PAIN.",
+          "TOO MUCH STRUCTURE→IFE FEELS MUNDANE.",
+          "TOO MUCH SPONTANEITY→LIFE FEELS CHAOTIC.",
+          "TOO MUCH WORK→BURNOUT.",
+          "TOO MUCH KINDNESS→NAIVETY.",
+          "TOO MUCH TRUST→PAIN.",
           " ",
           "STOP BEING “TOO MUCH.” START FINDING YOUR BALANCE—YOUR WAY.",
           " ",
@@ -35,7 +35,7 @@
           " ",
           "ABOUT:",
           "CHINESE GUY  ❤️  MUSIC · CATS · INTERNET TECH | MINIMALIST LIFE.",
-          "REACH OUT VIA 📮 IF YOU'D LIKE TO CONNECT. :)",
+          "REACH OUT VIA EMAIL IF YOU'D LIKE TO CONNECT. :)",
           "X@WAHSUN.ORG",
         ],
         i = 1, j, item, html,
