--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           " ",
           "TOO MUCH IS YOUR WORST ENEMY",
           " ",
-          "TOO MUCH STRUCTURE → IFE FEELS MUNDANE.",
-          "TOO MUCH SPONTANEITY → LIFE FEELS CHAOTIC.",
-          "TOO MUCH WORK → BURNOUT.",
-          "TOO MUCH KINDNESS → NAIVETY.",
-          "TOO MUCH TRUST → PAIN.",
+          "TOO MUCH STRUCTURE→IFE FEELS MUNDANE.",
+          "TOO MUCH SPONTANEITY→LIFE FEELS CHAOTIC.",
+          "TOO MUCH WORK→BURNOUT.",
+          "TOO MUCH KINDNESS→NAIVETY.",
+          "TOO MUCH TRUST→PAIN.",
           " ",
-          "STOP BEING “TOO MUCH.” START FINDING YOUR BALANCE—YOUR WAY.",
+          "STOP BEING “TOO MUCH” START FINDING YOUR BALANCE—YOUR WAY.",
           " ",
           "MOST PEOPLE THINK IN EXTREMES. LIFE ISN'T BLACK OR WHITE—IT'S A SPECTRUM. FIND YOUR SPOT. DO WHAT ENERGIZES YOU. LEARN BY DOING.",
           " ",   
