--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           "............",
           '..................................................',
           " ",
-          "ABOUT:",
+          "ABOUT ME:",
           " ",
           "CHINESE GUY  ❤️  MUSIC · CATS · INTERNET TECH | MINIMALIST LIFE.",
           "REACH OUT VIA EMAIL IF YOU'D LIKE TO CONNECT. :)",
